# agentic-rag

./: .gitignore  README.md  pyproject.toml
data/: manual_usfq.md  preguntasyrespuestas_clean.xlsx  usfq-qa-dataset-v2.xlsx
files/: usfq_student_guide_large_mkd_eng.gml  usfq_student_guide_large_mkd_esp.gml
images/: AgenticRag.excalidraw  metrics.xlsx
notebooks/: 1_vector_store_retriever.ipynb  2_graph_retriever.ipynb  3_langrapgh_app.ipynb  4_qa_test.ipynb
src/: config.py
src/agent/: response_agents.py  utils_agents.py
src/app/: langraph_core.py  langraph_functions.py
src/infrastructure/: chunking_doc.py  graph_knowledge.py  retrievers.py
src/prompts/: usfq_prompts.py
src/tools/: create_qa_dataset.py  evaluate_rag.py
